# worldgen_lang

./: .gitignore  Cargo.toml
example/df/: included.densityfunction  main.densityfunction
src/: lib.rs  main.rs
src/compiler/: forward_declare.rs  lexer.rs  mod.rs  parser.rs  pipeline.rs  type_checker.rs
src/compiler/ast/: forward.rs  mod.rs  simple.rs  typed.rs
src/compiler/error/: mod.rs  render.rs  reporting.rs  span.rs
src/compiler/name/: mod.rs
src/compiler/type_checker/: hint.rs
src/util/: mod.rs
