[package]
name = "worldgen_lang"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
line-col = "0.2.1"
non-empty-vec = "0.2.3"
lazy_static = "1.4.0"
