[package]
name = "worldgen_lang"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
line-col = "0.2.1"
non-empty-vec = "0.2.3"
termcolor = "1.2.0"
diagnostic_render = { git = "https://github.com/mschae23/diagnostic_render", tag = "v1.0.2" } # path = "../diagnostic_render" }
